working with video background, navbar and starting second page

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pompiere" rel="stylesheet">
 	<title>Subash Pradhan - Portfolio</title>
 </head>
 <body>
 	<div id="container">
+		<video class="video" autoplay="true" loop>
+			<source src="videos/Working-Man.mp4" type="video/mp4">
+			<source src="videos/Working-Man.webm" type="video/webm">
+		</video>
+
 		<div id="my-page" class="page-1">
 			<div id="navbar">
 				<img class="logo" src="images/my-logo.png" alt="my-logo1">				
 				<ul>
 					<li><input class="search" type="text" name="search" placeholder="Search my works.."></li>
-					<li><a href="#my-page">My Page</a></li>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#resume">Resume</a></li>
@@ -30,15 +35,36 @@
 				<div id="content-1" class="col-lg-6">
 				</div>
 				<div id="content-2" class="col-lg-6">
-					<img class="my-image" src="images/my-image-1.jpg" alt="my-image">
-					
+					<img class="my-image" src="images/my-image.png" alt="my-image">		
+					<hr>		
 				</div>
-			</div>	
-
-			
-		</div>
-		
+			</div>
+		</div>	
+		<div id="about" class="row page-2">
+			<h2>ABOUT ME</h2>
+			<hr>	
+			<div id="content-3" class="col-lg-6">
+				<img class="about-image" src="images/about-image.png" alt="about-image">
+			</div>
+			<div id="content-4" class="col-lg-6">
+				<p class="my-info">	
+					Hi this is Subash Pradhan. I am originally from kathmandu, Nepal and currently 
+					living in Amsterdam, Netherlands. I am interested in computers, technologies and love to 
+					discover new things specially with so called coding. Recently, I did certificate course at NYCDA
+					(New York Code & Design Academy) based on Front-End-Development. So, overall with the help of the course
+					I have mainly good knowledge of HTML, CSS & JAVASCRIPT/JQUERY. Apart from it I also have basic ideas of 
+					SASS, AJAX, JSON, RUBY etc... to cover overall designing of web development. About my experience, I have
+					worked as Technical Officer in a software company called Software Systems Nepal(SSN) for 3 years in Nepal.
+					With which I have experience of Computer Hardware & Networkings, Software installations, Troubleshootings,
+					MYSQL and more. My target is to work for developing companies and collect new ideas/experience making 
+					myself more better on the land of coding. I am a determined, flexible guy who believes hard work is the 
+					key to success with the flow of time!!! 
+				</p>	
+			</div>			
+		</div>	
 	</div>
+
+	
 
 </body>
 </html>
