--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
 	<nav class="navbar-fixed">
 		<div id="homesection" >
 			<div id="navbar">
-				<img class="logo" src="images/my-logo.png" alt="my-logo1">				
-				<ul class="topnav">
-					<li class="icon"><i class="fa fa-bars fa-2x" aria-hidden="true"></i>
-					</li>
-					<li>
+				<img class="logo" src="images/my-logo.png" alt="my-logo1">
+				<span class="icon">
+					<i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+				</span>				
+				<ul class="topnav">					
+					<!-- <li>
 						<form id="cse-search-box-only" action="http://google.com?cref={http://nycda.zone/subash187/}">
 						    <input type="hidden" name="cx" value="014624506685165915712:brcyjkvz47k" />
 							<input type="hidden" name="ie" value="UTF-8" />
 							<input  class="search" type="text" placeholder="search for my works..." name="q"/>
 						</form>
-					</li>
+					</li> -->
 					<li><a id="home" href="#homesection">Home</a></li>
 					<li><a id="about" href="#aboutsection">About</a></li>
 					<li><a id="resume" href="#resumesection">Resume</a></li>
@@ -49,6 +50,7 @@
 				<div id="content-1" class="col-lg-6">
 				</div>
 				<div id="mobile-content-1" class="col-lg-6">
+					<img class="image-mobile" src="images/image-mobile.png" alt="mobile-image">
 					<h1 class="hello">Hello!!!</h1>
 					<p class="hello-2">Welcome to my Portfolio !!!</p>
 					<p class="hello-2">I am Subash Pradhan !!!</p>
