MAKING SOME CHANGES
PRACTICING GIT AFTER 2 YRS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/typed.js"></script>
 	<script src="js/email-validator.js"></script>
+	<script src="js/src/jquery.youtubebackground.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
@@ -17,10 +18,7 @@
 </head>
 <body>
 	<div id="video-bg">
-		<video class="video" autoplay="true" loop>
-			<source src="videos/Working-Man.mp4" type="video/mp4">
-			<source src="videos/Working-Man.webm" type="video/webm">
-		</video>
+		<iframe class="video" src="https://www.youtube.com/embed/5-LyRjHlRgQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>	
 	</div>	
 
 	<nav class="navbar-fixed">
@@ -32,7 +30,7 @@
 				</span>				
 				<ul class="topnav">					
 					<!-- <li>
-						<form id="cse-search-box-only" action="http://google.com?cref={http://nycda.zone/subash187/}">
+						<form id="cse-search-box-only" action="https://google.com?cref={https://nycda.zone/subash187/}">
 						    <input type="hidden" name="cx" value="014624506685165915712:brcyjkvz47k" />
 							<input type="hidden" name="ie" value="UTF-8" />
 							<input  class="search" type="text" placeholder="search for my works..." name="q"/>
@@ -60,9 +58,9 @@
 					<p class="hello-2">I am Subash Pradhan !!!</p>
 					<p class="hello-2">Nice To Meet You !!!</p>
 				</div>
-				<div id="content-2" class="col-lg-6">
-					<img class="my-image" src="images/my-image.png" alt="my-image">		
-					<hr>		
+				<div id="content-2" class="col-lg-2">
+					<img class="my-image" src="images/image-mobile.png" alt="my-image">		
+					<!-- <hr>		 -->
 				</div>
 			</div>
 		</div>
@@ -150,7 +148,7 @@
 								<a href="https://github.com/SubashPradhan" target="_blank"> Github: Https://github.com/SubashPradhan</a>
 							</li>
 							<li>
-								<a href="http://www.softsysnepal.com/" target="_blank">
+								<a href="https://www.softsysnepal.com/" target="_blank">
 								Software Systems Nepal (P) Ltd.
 								Kathmandu, Nepal (977) 01-4016768</a>
 							</li>
@@ -203,7 +201,7 @@
 							CONTACT ME
 						</span>
 						
-						<form method="POST" name="contactform" action="http://www.elwebman.nl/subash/myphp.php" id="form">
+						<form method="POST" name="contactform" action="https://www.elwebman.nl/subash/myphp.php" id="form">
 							<p class="form-para">
 								Full Name * :
 							</p>	
@@ -249,7 +247,7 @@
       										We were given to make a movie app using AJAX & JSON. I made a simple movie app that could find a movie at a time using JSON and keyup function in jquery.
       									</p>
       									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/AJAX/" target="_blank"> http://nycda.zone/subash187/AJAX/</a>			
+      										Website link:<a href="https://nycda.zone/subash187/AJAX/" target="_blank"> https://nycda.zone/subash187/AJAX/</a>			
       									</p>
       								</div>	
       								<div class="modal-footer">
@@ -280,7 +278,7 @@
 											In this project we worked in a group of four people. I was supposed to make homepage for the page! I make a moving background in which background keeps on changing !! and simple navbar.
       									</p>
       									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/restaurant/" target="_blank"> http://nycda.zone/subash187/restaurant/</a>	
+      										Website link:<a href="https://nycda.zone/subash187/restaurant/" target="_blank"> https://nycda.zone/subash187/restaurant/</a>	
       									</p>
       								</div>	
       								<div class="modal-footer">
@@ -311,7 +309,7 @@
       										This is a very simple website. The new thing about this website was we were supposed to work in sass that was pretty good experience. Sass is pretty well organized and easy to use.
       									</p>
       									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/sass-practice/" target="_blank"> http://nycda.zone/subash187/sass-practice/</a>	
+      										Website link:<a href="https://nycda.zone/subash187/sass-practice/" target="_blank"> https://nycda.zone/subash187/sass-practice/</a>	
       									</p>
       								</div>	
       								<div class="modal-footer">
@@ -341,7 +339,7 @@
       										We were given two acme page picture, one desktop version and other mobile version,  we were supposed to build the page alike as in picture as well as responsive for mobile version.This was the first mobile version work for me !!				
       									</p>
       									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/mobile/acme.html" target="_blank"> http://nycda.zone/subash187/mobile/acme.html</a>	
+      										Website link:<a href="https://nycda.zone/subash187/mobile/acme.html" target="_blank"> https://nycda.zone/subash187/mobile/acme.html</a>	
       									</p>
       								</div>	
       								<div class="modal-footer">
@@ -372,7 +370,7 @@
       										This was also a kind of project given to us to work on some cause. I worked here in earthquake in Nepal. This is three page website and my first bootstrap page !! Very simple page where we were learning to use jquery and javascript.
       									</p>
       									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/earthquake/earthquake.html" target="_blank"> http://nycda.zone/subash187/earthquake/earthquake.html</a>	
+      										Website link:<a href="https://nycda.zone/subash187/earthquake/earthquake.html" target="_blank"> https://nycda.zone/subash187/earthquake/earthquake.html</a>	
       									</p>
       								</div>	
       								<div class="modal-footer">
@@ -401,7 +399,7 @@
       										This was kind of a Final Project where we were suppose to use as much as javascript as possible so far we had learned.Simple javascript and jquery used and responsive pages !!
       									</p>
       									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/Final-Project/" target="_blank"> http://nycda.zone/subash187/Final-Project/</a>	
+      										Website link:<a href="https://nycda.zone/subash187/Final-Project/" target="_blank"> https://nycda.zone/subash187/Final-Project/</a>	
       									</p>
       								</div>	
       								<div class="modal-footer">
