Fixes for updates

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/typed.js"></script>
 	<script src="js/email-validator.js"></script>
+	<script src="js/src/jquery.youtubebackground.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
@@ -17,10 +18,7 @@
 </head>
 <body>
 	<div id="video-bg">
-		<video class="video" autoplay="true" loop>
-			<source src="videos/Working-Man.mp4" type="video/mp4">
-			<source src="videos/Working-Man.webm" type="video/webm">
-		</video>
+		<iframe class="video" src="https://www.youtube.com/embed/5-LyRjHlRgQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>	
 	</div>	
 
 	<nav class="navbar-fixed">
@@ -32,7 +30,7 @@
 				</span>				
 				<ul class="topnav">					
 					<!-- <li>
-						<form id="cse-search-box-only" action="http://google.com?cref={http://nycda.zone/subash187/}">
+						<form id="cse-search-box-only" action="https://google.com?cref={https://nycda.zone/subash187/}">
 						    <input type="hidden" name="cx" value="014624506685165915712:brcyjkvz47k" />
 							<input type="hidden" name="ie" value="UTF-8" />
 							<input  class="search" type="text" placeholder="search for my works..." name="q"/>
@@ -60,9 +58,9 @@
 					<p class="hello-2">I am Subash Pradhan !!!</p>
 					<p class="hello-2">Nice To Meet You !!!</p>
 				</div>
-				<div id="content-2" class="col-lg-6">
-					<img class="my-image" src="images/my-image.png" alt="my-image">		
-					<hr>		
+				<div id="content-2" class="col-lg-2">
+					<img class="my-image" src="images/image-mobile.png" alt="my-image">		
+					<!-- <hr>		 -->
 				</div>
 			</div>
 		</div>
@@ -88,16 +86,8 @@
 	 					</span>
  					</form>
 					<p class="my-info">	
-						Hi this is Subash Pradhan. I am originally from kathmandu, Nepal and currently 
-						living in Amsterdam, Netherlands. I am interested in computers, technologies and love to 
-						discover new things specially with so called coding. Recently, I did certificate course at NYCDA
-						(New York Code & Design Academy) based on Front-End-Development. So, overall with the help of the course
-						I have mainly good knowledge of HTML, CSS & JAVASCRIPT/JQUERY. Apart from it I also have basic ideas of 
-						SASS, AJAX, JSON, RUBY etc... to cover overall designing of web development. About my experience, I have
-						worked as Technical Officer in a software company called Software Systems Nepal(SSN) for 3 years in Nepal.
-						With which I have experience of Computer Hardware & Networkings, Software installations, Troubleshootings,
-						MYSQL and more. My target is to work for developing companies and collect new ideas/experience making 
-						myself more better on the land of coding. I am a determined, flexible young man who believes hard work is the key to success with the flow of time!!! 
+						Hi everyone, this is Subash Pradhan from Haarlem. As you can see I have done part-time course for HTML, CSS & Javascript previously almost 2years ago.I had some issues so couldnt continue,That's why now I am here to complete what I left two years ago.I myself love coding and I am looking forward to develop my career as a FullStack Web Developer.This is my old Portfolio just brought it back to life to present infront of you guys !!! Let's make best out of our Class.
+						See you guys there !!!!!
 					</p>
 				</div>			
 			</div>
@@ -150,7 +140,7 @@
 								<a href="https://github.com/SubashPradhan" target="_blank"> Github: Https://github.com/SubashPradhan</a>
 							</li>
 							<li>
-								<a href="http://www.softsysnepal.com/" target="_blank">
+								<a href="https://www.softsysnepal.com/" target="_blank">
 								Software Systems Nepal (P) Ltd.
 								Kathmandu, Nepal (977) 01-4016768</a>
 							</li>
@@ -203,7 +193,7 @@
 							CONTACT ME
 						</span>
 						
-						<form method="POST" name="contactform" action="http://www.elwebman.nl/subash/myphp.php" id="form">
+						<form method="POST" name="contactform" action="https://www.elwebman.nl/subash/myphp.php" id="form">
 							<p class="form-para">
 								Full Name * :
 							</p>	
@@ -248,9 +238,9 @@
       									<p class="description-para">
       										We were given to make a movie app using AJAX & JSON. I made a simple movie app that could find a movie at a time using JSON and keyup function in jquery.
       									</p>
-      									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/AJAX/" target="_blank"> http://nycda.zone/subash187/AJAX/</a>			
-      									</p>
+      									<!-- <p class="description-para">
+      										Website link:<a href="https://nycda.zone/subash187/AJAX/" target="_blank"> https://nycda.zone/subash187/AJAX/</a>			
+      									</p> -->
       								</div>	
       								<div class="modal-footer">
           								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -279,9 +269,9 @@
       									<p class="description-para">
 											In this project we worked in a group of four people. I was supposed to make homepage for the page! I make a moving background in which background keeps on changing !! and simple navbar.
       									</p>
-      									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/restaurant/" target="_blank"> http://nycda.zone/subash187/restaurant/</a>	
-      									</p>
+      									<!-- <p class="description-para">
+      										Website link:<a href="https://nycda.zone/subash187/restaurant/" target="_blank"> https://nycda.zone/subash187/restaurant/</a>	
+      									</p> -->
       								</div>	
       								<div class="modal-footer">
           								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -310,9 +300,9 @@
       									<p class="description-para">
       										This is a very simple website. The new thing about this website was we were supposed to work in sass that was pretty good experience. Sass is pretty well organized and easy to use.
       									</p>
-      									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/sass-practice/" target="_blank"> http://nycda.zone/subash187/sass-practice/</a>	
-      									</p>
+      									<!-- <p class="description-para">
+      										Website link:<a href="https://nycda.zone/subash187/sass-practice/" target="_blank"> https://nycda.zone/subash187/sass-practice/</a>	
+      									</p> -->
       								</div>	
       								<div class="modal-footer">
           								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -340,9 +330,9 @@
       									<p class="description-para">
       										We were given two acme page picture, one desktop version and other mobile version,  we were supposed to build the page alike as in picture as well as responsive for mobile version.This was the first mobile version work for me !!				
       									</p>
-      									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/mobile/acme.html" target="_blank"> http://nycda.zone/subash187/mobile/acme.html</a>	
-      									</p>
+      									<!-- <p class="description-para">
+      										Website link:<a href="https://nycda.zone/subash187/mobile/acme.html" target="_blank"> https://nycda.zone/subash187/mobile/acme.html</a>	
+      									</p> -->
       								</div>	
       								<div class="modal-footer">
           								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -371,9 +361,9 @@
       									<p class="description-para">
       										This was also a kind of project given to us to work on some cause. I worked here in earthquake in Nepal. This is three page website and my first bootstrap page !! Very simple page where we were learning to use jquery and javascript.
       									</p>
-      									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/earthquake/earthquake.html" target="_blank"> http://nycda.zone/subash187/earthquake/earthquake.html</a>	
-      									</p>
+      									<!-- <p class="description-para">
+      										Website link:<a href="https://nycda.zone/subash187/earthquake/earthquake.html" target="_blank"> https://nycda.zone/subash187/earthquake/earthquake.html</a>	
+      									</p> -->
       								</div>	
       								<div class="modal-footer">
           								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -400,9 +390,9 @@
       									<p class="description-para">
       										This was kind of a Final Project where we were suppose to use as much as javascript as possible so far we had learned.Simple javascript and jquery used and responsive pages !!
       									</p>
-      									<p class="description-para">
-      										Website link:<a href="http://nycda.zone/subash187/Final-Project/" target="_blank"> http://nycda.zone/subash187/Final-Project/</a>	
-      									</p>
+      									<!-- <p class="description-para">
+      										Website link:<a href="https://nycda.zone/subash187/Final-Project/" target="_blank"> https://nycda.zone/subash187/Final-Project/</a>	
+      									</p> -->
       								</div>	
       								<div class="modal-footer">
           								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -420,16 +410,16 @@
 		<div class="container footer-page">
 				
 			<div class="media">
-				<a href="https://www.facebook.com/supro.wilde" target="_blank">
-					<i class="fa fa-facebook" aria-hidden="true"></i>
+				<a href="https://github.com/SubashPradhan" target="_blank">
+					<i class="fa fa-github-square" aria-hidden="true"></i>
 				</a>
 
-				<a href="mailto:suprowilde5@gmail.com" target="_blank">
-					<i class="fa fa-envelope-o" aria-hidden="true"></i>
+				<a href="https://www.linkedin.com/in/subash-pradhan-371979136/" target="_blank">
+					<i class="fa fa-linkedin-square" aria-hidden></i>
 				</a>
 
 				<a href="https://www.youtube.com/channel/UC3CWXFrDWwVlXU3D_-j5siQ" target="_blank">
-					<i class="fa fa-youtube-play" aria-hidden="true"></i>
+					<i class="fa fa-instagram" aria-hidden></i>
 				</a>								
 			</div>
 
